第三次上传8.24

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <modules>
     <module>MyBatisBase</module>
       <module>MyBatisDynamicSql</module>
+      <module>RelationShip</module>
   </modules>
 
   <name>MyBatis</name>
